Enable java-processing for Java 8 as well